Convert Number to Corresponding Month Name Get Array of Multiples FizzBuzz Interview Question

--- a/ProblemSolving/Views/GetMonthNameByNumber/Index.cshtml
+++ b/ProblemSolving/Views/GetMonthNameByNumber/Index.cshtml
@@ -5,45 +5,110 @@
     ViewBag.Title = "View";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<style>
-    label.error.fail-alert {
-        border: 2px solid red;
-        border-radius: 4px;
-        line-height: 1;
-        padding: 2px 0 6px 6px;
-        background: #ffe6eb;
-    }
-
-    input.valid.success-alert {
-        border: 2px solid #4CAF50;
-        color: green;
-    }
-</style>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.0/jquery.validate.min.js"></script>
 
 <div class="container">
     <h2>Convert Number to Corresponding Month Name</h2>
-    @using (Html.BeginForm("Index", "GetMonthNameByNumber", FormMethod.Post, new { @id = "myform" }))
-    {
-        <div class="form-group">
-            <label for="monthNumber">Please enter month number below </label>
-            @Html.TextBoxFor(m => m.month, null, new { @class = "form-control", @id = "monthNumber", @minValue = 1, @maxValue = 12 })
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-    }
-    @if (!string.IsNullOrWhiteSpace(Model.fullMonthName))
-    {
-        <div>Full Month : @Model.fullMonthName</div>
-    }
-    @if (!string.IsNullOrWhiteSpace(Model.fullMonthName))
-    {
-        <div>Abbreviated Month : @Model.AbbreviatedMonthName</div>
-    }
+    <div>
+        <p><span>Create a function that takes a number (from 1 to 12) and returns its corresponding month name as a string. For example, if you're given </span><code>3</code><span> as input, your function should return </span><code>"March"</code><span>, because March is the 3rd month.</span></p>
+        <table>
+            <thead>
+                <tr>
+                    <th><span>Number</span></th>
+                    <th><span>Month Name</span></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><span>1</span></td>
+                    <td><span>January</span></td>
+                </tr>
+                <tr>
+                    <td><span>2</span></td>
+                    <td><span>February</span></td>
+                </tr>
+                <tr>
+                    <td><span>3</span></td>
+                    <td><span>March</span></td>
+                </tr>
+                <tr>
+                    <td><span>4</span></td>
+                    <td><span>April</span></td>
+                </tr>
+                <tr>
+                    <td><span>5</span></td>
+                    <td><span>May</span></td>
+                </tr>
+                <tr>
+                    <td><span>6</span></td>
+                    <td><span>June</span></td>
+                </tr>
+                <tr>
+                    <td><span>7</span></td>
+                    <td><span>July</span></td>
+                </tr>
+                <tr>
+                    <td><span>8</span></td>
+                    <td><span>August</span></td>
+                </tr>
+                <tr>
+                    <td><span>9</span></td>
+                    <td><span>September</span></td>
+                </tr>
+                <tr>
+                    <td><span>10</span></td>
+                    <td><span>October</span></td>
+                </tr>
+                <tr>
+                    <td><span>11</span></td>
+                    <td><span>November</span></td>
+                </tr>
+                <tr>
+                    <td><span>12</span></td>
+                    <td><span>December</span></td>
+                </tr>
+            </tbody>
+        </table>
+        <h3><span>Examples</span></h3>
+        <span>MonthName(3) ➞ "March"</span><br />
+        <span>MonthName(12) ➞ "December"</span><br />
+        <span>MonthName(6) ➞ "June"</span><br />
+    </div>
+    <div style="margin-top:20px;">
+        @using (Html.BeginForm("Index", "GetMonthNameByNumber", FormMethod.Post, new { @id = "myform" }))
+        {
+            <div class="form-group">
+                <label for="monthNumber">Please enter month number below </label>
+                @Html.TextBoxFor(m => m.month, null, new { @class = "form-control", @id = "monthNumber" })
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="button" class="btn btn-default" onclick="clearform()">Clear</button>
+        }
+        @if (!string.IsNullOrWhiteSpace(Model.fullMonthName) || !string.IsNullOrWhiteSpace(Model.fullMonthName))
+        {
+            <div id="result">
+                <hr style="border:1px dotted #000!important" />
+                <div class="form-group">
+                    <label>See result below </label>
+                    @if (!string.IsNullOrWhiteSpace(Model.fullMonthName))
+                    {
+                        <div>Full Month : <code>@Model.fullMonthName</code></div>
+                    }
+                    @if (!string.IsNullOrWhiteSpace(Model.fullMonthName))
+                    {
+                        <div>Abbreviated Month : <code>@Model.AbbreviatedMonthName</code></div>
+                    }
+                </div>
+            </div>
+        }
+    </div>
 </div>
 @section scripts{
     <script>
         $(document).ready(function () {
+            $("#collapseMenu").addClass("in");
+            $(".list-group-item").removeClass("active-problem");
+            $("#GetMonthNameByNumber").addClass("active-problem");
+
             // Validate monthNumber
             $('#myform').validate({ // initialize the plugin
                 errorClass: "error fail-alert",
@@ -64,5 +129,10 @@
                 }
             });
         });
+
+        function clearform() {
+            $("#monthNumber").val(0);
+            $("#result").html("");
+        }
     </script>
 }
