--- a/ProblemSolving/Views/Shared/_Layout.cshtml
+++ b/ProblemSolving/Views/Shared/_Layout.cshtml
@@ -4,32 +4,115 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
+    <style>
+        label.error.fail-alert {
+            border: 2px solid red;
+            border-radius: 4px;
+            line-height: 1;
+            padding: 2px 0 6px 6px;
+            background: #ffe6eb;
+        }
+
+        input.valid.success-alert {
+            border: 2px solid #4CAF50;
+            color: green;
+        }
+
+        #result {
+            overflow: auto;
+        }
+
+        .list-group-item {
+            text-decoration: none;
+            cursor: pointer;
+            background-color: white;
+        }
+
+            .list-group-item:focus, .list-group-item:hover {
+                text-decoration: none !important;
+                color: white !important;
+                background-color: lightgrey !important;
+            }
+
+        .active-problem {
+            text-decoration: none;
+            cursor: pointer;
+            background-color: lightgrey !important;
+        }
+
+        .panel-heading:focus, .panel-heading:hover {
+            text-decoration: none !important;
+            color: black !important;
+            background-color: lightgrey !important;
+        }
+
+        a {
+            text-decoration: none;
+            cursor: pointer;
+            background-color: white;
+            color: black !important;
+        }
+
+            a:focus, a:hover {
+                text-decoration: none !important;
+            }
+
+        .panel-group {
+            overflow: auto;
+            max-height: 300px;
+        }
+
+        hr {
+            margin-top: 3px;
+            border-top: 2px solid #000 !important;
+        }
+
+        .form-control {
+            width: 40% !important;
+        }
+    </style>
+    @*@Styles.Render("~/Content/css")*@
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    @*@Scripts.Render("~/bundles/modernizr")
+        @Scripts.Render("~/bundles/jquery")
+        @Scripts.Render("~/bundles/bootstrap")*@
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.0/jquery.validate.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     @RenderSection("scripts", required: false)
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse" title="more options">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".panel-collapse" style="display:block!important;">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Problem Solving", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Get Month Name By Number", "Index", "GetMonthNameByNumber")</li>
-                </ul>
             </div>
         </div>
     </div>
     <div class="container body-content">
+        <div class="jumbotron panel-group">
+            <h3>Choose problem from below</h3>
+            <hr />
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a data-toggle="collapse" href="#collapseMenu">Problems</a>
+                    </h4>
+                </div>
+                <div id="collapseMenu" class="panel-collapse collapse">
+                    <ul class="list-group">
+                        <li class="list-group-item" id="GetMonthNameByNumber">@Html.ActionLink("Get Month Name By Number", "Index", "GetMonthNameByNumber")</li>
+                        <li class="list-group-item" id="ArrayofMultiples">@Html.ActionLink("Get Array of Multiples", "Index", "ArrayofMultiples")</li>
+                        <li class="list-group-item" id="FizzBuzz">@Html.ActionLink("FizzBuzz Interview Question", "Index", "FizzBuzz")</li>
+                    </ul>
+                    @*<div class="panel-footer">Footer</div>*@
+                </div>
+            </div>
+        </div>
         @RenderBody()
     </div>
 </body>
