--- a/ProblemSolving/Views/Shared/_Layout.cshtml
+++ b/ProblemSolving/Views/Shared/_Layout.cshtml
@@ -37,13 +37,7 @@
         .active-problem {
             text-decoration: none;
             cursor: pointer;
-            background-color: lightgrey !important;
-        }
-
-        .panel-heading:focus, .panel-heading:hover {
-            text-decoration: none !important;
-            color: black !important;
-            background-color: lightgrey !important;
+            background-color: lightgray !important;
         }
 
         a {
@@ -57,11 +51,6 @@
                 text-decoration: none !important;
             }
 
-        .panel-group {
-            overflow: auto;
-            max-height: 300px;
-        }
-
         hr {
             margin-top: 3px;
             border-top: 2px solid #000 !important;
@@ -69,6 +58,42 @@
 
         .form-control {
             width: 40% !important;
+        }
+
+        body {
+            font-family: "Lato", sans-serif;
+        }
+
+        .sidenav {
+            height: 100%;
+            width: 300px;
+            position: fixed;
+            z-index: 1;
+            top: 0;
+            left: 0;
+            overflow-x: hidden;
+            background-color: #ededed;
+        }
+
+        .main {
+            margin-left: 300px; /* Same as the width of the sidenav */
+        }
+
+        table thead tr th span {
+            margin: 10px 10px 10px 10px !important;
+        }
+        table tbody tr td span {
+            margin: 10px 10px 10px 10px !important;
+        }
+
+        @@media screen and (max-height: 450px) {
+            .sidenav {
+                padding-top: 15px;
+            }
+
+                .sidenav a {
+                    font-size: 12px;
+                }
         }
     </style>
     @*@Styles.Render("~/Content/css")*@
@@ -82,38 +107,23 @@
     @RenderSection("scripts", required: false)
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".panel-collapse" style="display:block!important;">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
+    <div class="body-content">
+        <div class="sidenav">
+            <div class="panel-group">
+                <h4 style="padding-left: 15px;">Choose problem from below</h4>
+                <hr style="margin:0!important" />
+                <ul class="list-group">
+                    <li class="list-group-item" id="ArrayofMultiples">@Html.ActionLink("Array of Multiples", "Index", "ArrayofMultiples")</li>
+                    <li class="list-group-item" id="FizzBuzz">@Html.ActionLink("FizzBuzz Interview Question", "Index", "FizzBuzz")</li>
+                    <li class="list-group-item" id="GetMonthNameByNumber">@Html.ActionLink("Month Name By Number", "Index", "GetMonthNameByNumber")</li>
+                </ul>
             </div>
         </div>
-    </div>
-    <div class="container body-content">
-        <div class="jumbotron panel-group">
-            <h3>Choose problem from below</h3>
-            <hr />
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h4 class="panel-title">
-                        <a data-toggle="collapse" href="#collapseMenu">Problems</a>
-                    </h4>
-                </div>
-                <div id="collapseMenu" class="panel-collapse collapse">
-                    <ul class="list-group">
-                        <li class="list-group-item" id="GetMonthNameByNumber">@Html.ActionLink("Get Month Name By Number", "Index", "GetMonthNameByNumber")</li>
-                        <li class="list-group-item" id="ArrayofMultiples">@Html.ActionLink("Get Array of Multiples", "Index", "ArrayofMultiples")</li>
-                        <li class="list-group-item" id="FizzBuzz">@Html.ActionLink("FizzBuzz Interview Question", "Index", "FizzBuzz")</li>
-                    </ul>
-                    @*<div class="panel-footer">Footer</div>*@
-                </div>
-            </div>
+        <div class="main">
+            <h4 style="padding-left:15px;">Problem description</h4>
+            <hr style="margin:0!important" />
+            @RenderBody()
         </div>
-        @RenderBody()
     </div>
 </body>
 </html>
